153: removed a few deprecations
Task-Url: https://github.com/eclipse/xsemantics/issues/153